--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -3,6 +3,7 @@
 @import url("./general.css");
 
 @import url("./background.css");
+@import url("./secondBackground.css");
 @import url("./custom-cursor.css");
 @import url("./loader-page.css");
 @import url("./hero-header.css");
